--- a/webproject/WebContent/NewFile1.html
+++ b/webproject/WebContent/NewFile1.html
@@ -4,9 +4,9 @@
 <meta charset="ISO-8859-1">
 <title>REGISTRATION</title>
 </head>
-<body>
-<form name="registrationform">
+<body style="background-color:gray;">
 <fieldset>
+<a href=http://localhost:8008/webproject/NewFile.html>login</a><br>
 <legend>Personal information</legend>
 First name:<br>
 <input type="text" name="firstname">
@@ -25,6 +25,5 @@ Retype password:<br>
 <br>
 <input type="submit" value="submit">
 </fieldset>
-</form>
 </body>
 </html>
