--- a/webproject/WebContent/NewFile.html
+++ b/webproject/WebContent/NewFile.html
@@ -2,46 +2,23 @@
 <html>
 <head>
 <title>MYWEBPAGE</title>
-<script>
-function submitFuntion()
-{
-var x=document.forms["myform"]["username"].value;
-var y=document.forms["myform"]["password"].value;
-if(x==null||x==""||y==null||y=="")
- {
- alert("both fields cannot be empty.");
-  }
-  else{
- if(x=="sowmya")
-   {
-   if(y=="1234")
-      {
-       alert("login successful");
-      }
-      else{
-        alert("wrong password");
-       }
-     }
-     else{
-        alert("user doesnot exist");
-     }
-    }
-}
-</script>
 </head>
-<body style="background-color:pink;">
-<form name="myform" onsubmit="sumitFunction()">
+<body style="background-color:gray;">
 <fieldset>
-<legend>Login</legend>
-<username style="color:red;">
-Username:<input type="text" name="username"><br>
+<center>
+<li><a href=http://localhost:8008/webproject/NewFile1.html>register</a></li><br>
+<legend>Login</legend><br>
+<username style="color:white;">
+Username:<input type="text" name="username">
 </username>
-<password style="color:red;">
-Password:<input type="password" name="pwd"><br>
+<br></br>
+<password style="color:white;">
+Password:<input type="password" name="pwd">
 </password>
+<br></br>
 <input type= "submit" value="submit">
 <p>forgot password?</p>
+</center>
 </fieldset>
-</form>
 </body>
 </html>
