--- a/webproject/WebContent/NewFile2.html
+++ b/webproject/WebContent/NewFile2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Bootstrap Example</title>
+<title>my project</title>
 <meta charset="utf-8">
 
 
@@ -19,26 +19,16 @@
 }
 </style>
 </head>
-<body>
-	<a href=http://localhost:8008/webproject/NewFile1.html>register</a>
-	<form name="myform" onsubmit="submitFunction()">
-		<fieldset>
-			<legend>Login</legend>
-			<username style="color:red;"> Username:<input type="text"
-				name="username">
-			<br>
-			</username>
-			<password style="color:red;"> Password:<input
-				type="password" name="pwd">
-			<br>
-			</password>
-			<input type="submit" value="submit">
-			<p>forgot password?</p>
-			<br>
-			<p style="color: blue;">Need help?</p>
-		</fieldset>
-	</form>
-
+<body style="background-color: pink;">
+<img src="E:\shopping-ideas-logo.jpg" width="50" height="50">
+	<div class="navbar navbar-default">
+		<ul class="nav nav-tabs">
+			<li class="active"><a
+				href="http://localhost:8008/webproject/NewFile2.html">Home</a></li>
+			<li><a href="http://localhost:8008/webproject/NewFile1.html">register</a></li>
+			<li><a href="http://localhost:8008/webproject/NewFile.html">login</a></li>
+		</ul>
+	</div>
 	<div class="container">
 		<br>
 		<div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -53,19 +43,19 @@
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner" role="listbox">
 				<div class="item active">
-					<img src="E:\baby.jpg" alt="baby" width="497" height="331">
+					<img src="E:\g1.jpg" alt="baby" width="497" height="331">
 				</div>
 
 				<div class="item">
-					<img src="E:\images (1).jpg" alt="baby" width="460" height="345">
+					<img src="E:\g2.jpg" alt="baby" width="460" height="345">
 				</div>
 
 				<div class="item">
-					<img src="E:\images (2).jpg" alt="baby" width="460" height="345">
+					<img src="E:\g3.jpg" alt="baby" width="460" height="345">
 				</div>
 
 				<div class="item">
-					<img src="E:\images.jpg" alt="baby" width="460" height="345">
+					<img src="E:\n1.jpg" alt="baby" width="460" height="345">
 				</div>
 			</div>
 
